--- a/angular.json
+++ b/angular.json
@@ -18,7 +18,7 @@
             "browser": "src/main.ts",
             "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
-            "assets": [],
+            "assets": ["src/assets"],
             "styles": ["src/global_styles.css"],
             "scripts": []
           },
