--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@angular-devkit/build-angular": "^17.1.0",
     "@angular/cli": "^17.1.0",
     "@angular/compiler-cli": "^17.1.0",
+    "@types/nodemon": "^1.19.6",
     "autoprefixer": "^10.4.17",
+    "nodemon": "^3.1.9",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "~5.3.2"
