--- a/angular.json
+++ b/angular.json
@@ -16,10 +16,17 @@
             "outputPath": "dist/demo",
             "index": "src/index.html",
             "browser": "src/main.ts",
-            "polyfills": ["zone.js"],
+            "polyfills": [
+              "zone.js"
+            ],
             "tsConfig": "tsconfig.app.json",
-            "assets": ["src/assets"],
-            "styles": ["src/global_styles.css"],
+            "assets": [
+              "src/assets",
+              "src/_redirects"
+            ],
+            "styles": [
+              "src/global_styles.css"
+            ],
             "scripts": []
           },
           "configurations": {
