--- a/angular.json
+++ b/angular.json
@@ -25,6 +25,8 @@
               "src/_redirects"
             ],
             "styles": [
+              "node_modules/@fortawesome/fontawesome-free/css/all.css",
+              "node_modules/swiper/swiper.css",
               "src/global_styles.css"
             ],
             "scripts": []
