--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "watch": "ng build --watch --configuration development"
+    "watch": "ng build --watch --configuration development",
+    "serve:ssr:demo": "node dist/demo/server/server.mjs"
   },
   "dependencies": {
     "@angular/animations": "^17.1.0",
@@ -16,8 +17,11 @@
     "@angular/forms": "^17.1.0",
     "@angular/platform-browser": "^17.1.0",
     "@angular/platform-browser-dynamic": "^17.1.0",
+    "@angular/platform-server": "^17.1.0",
     "@angular/router": "^17.1.0",
+    "@angular/ssr": "^17.3.12",
     "@fortawesome/fontawesome-free": "^6.5.1",
+    "express": "^4.18.2",
     "ng-recaptcha": "^13.2.1",
     "rxjs": "~7.8.0",
     "swiper": "^11.0.5",
@@ -28,6 +32,8 @@
     "@angular-devkit/build-angular": "^17.1.0",
     "@angular/cli": "^17.1.0",
     "@angular/compiler-cli": "^17.1.0",
+    "@types/express": "^4.17.17",
+    "@types/node": "^18.18.0",
     "@types/nodemon": "^1.19.6",
     "autoprefixer": "^10.4.17",
     "nodemon": "^3.1.9",
