--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "serve:ssr:demo": "node dist/demo/server/server.mjs"
+    "watch": "ng build --watch --configuration development"
   },
   "dependencies": {
     "@angular/animations": "^17.1.0",
@@ -17,11 +16,8 @@
     "@angular/forms": "^17.1.0",
     "@angular/platform-browser": "^17.1.0",
     "@angular/platform-browser-dynamic": "^17.1.0",
-    "@angular/platform-server": "^17.1.0",
     "@angular/router": "^17.1.0",
-    "@angular/ssr": "^17.3.12",
     "@fortawesome/fontawesome-free": "^6.5.1",
-    "express": "^4.18.2",
     "ng-recaptcha": "^13.2.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -31,7 +27,6 @@
     "@angular-devkit/build-angular": "^17.1.0",
     "@angular/cli": "^17.1.0",
     "@angular/compiler-cli": "^17.1.0",
-    "@types/express": "^4.17.17",
     "@types/node": "^18.18.0",
     "@types/nodemon": "^1.19.6",
     "autoprefixer": "^10.4.17",
